--- a/po/lt.po
+++ b/po/lt.po
@@ -2022,7 +2022,7 @@ msgstr "Klaida perkeliant atsiųstą failą."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
-msgstr ""
+msgstr "Negalima perskaityti (perkelti) įkelto failo."
 
 #: libraries/Index.class.php:418 tbl_relation.php:526
 msgid "No index defined!"
