Avoid disambigution with Sun as a star

--- a/po/es.po
+++ b/po/es.po
@@ -1867,6 +1867,7 @@ msgstr "Sábado"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Dom"
 
