--- a/po/ja.po
+++ b/po/ja.po
@@ -1838,6 +1838,7 @@ msgstr "土"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "日"
 
