--- a/po/mn.po
+++ b/po/mn.po
@@ -1966,6 +1966,7 @@ msgstr ""
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Ня"
 
