--- a/po/si.po
+++ b/po/si.po
@@ -1881,6 +1881,7 @@ msgstr "සෙනසුරාදා"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "ඉරිදා"
 
