--- a/po/te.po
+++ b/po/te.po
@@ -1878,6 +1878,7 @@ msgstr "శనివారం"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "ఆది"
 
