--- a/po/tt.po
+++ b/po/tt.po
@@ -1964,6 +1964,7 @@ msgstr ""
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Ykş"
 
