--- a/po/uk.po
+++ b/po/uk.po
@@ -1862,6 +1862,7 @@ msgstr "Субота"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Нд"
 
