--- a/po/ur.po
+++ b/po/ur.po
@@ -1892,6 +1892,7 @@ msgstr "ہفتہ"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "اتوار"
 
