--- a/po/ar.po
+++ b/po/ar.po
@@ -1842,6 +1842,7 @@ msgstr "السبت"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "الأحد"
 
