--- a/po/bg.po
+++ b/po/bg.po
@@ -1861,6 +1861,7 @@ msgstr "събота"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "нд"
 
