--- a/po/bs.po
+++ b/po/bs.po
@@ -1949,6 +1949,7 @@ msgstr ""
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Ned"
 
