--- a/po/fr.po
+++ b/po/fr.po
@@ -1845,6 +1845,7 @@ msgstr "Samedi"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Dim"
 
