--- a/po/gl.po
+++ b/po/gl.po
@@ -2004,6 +2004,7 @@ msgstr ""
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Do"
 
