--- a/po/he.po
+++ b/po/he.po
@@ -1951,6 +1951,7 @@ msgstr ""
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "יום ראשון"
 
