--- a/po/id.po
+++ b/po/id.po
@@ -1879,6 +1879,7 @@ msgstr "Sabtu"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Minggu"
 
