--- a/po/lt.po
+++ b/po/lt.po
@@ -1886,6 +1886,7 @@ msgstr "Šeštadienis"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Sek"
 
