--- a/po/ml.po
+++ b/po/ml.po
@@ -1790,6 +1790,7 @@ msgstr ""
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr ""
 
