--- a/po/pl.po
+++ b/po/pl.po
@@ -1923,6 +1923,7 @@ msgstr "Sobota"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Nie"
 
