--- a/po/ro.po
+++ b/po/ro.po
@@ -1979,6 +1979,7 @@ msgstr ""
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Dum"
 
