--- a/po/tr.po
+++ b/po/tr.po
@@ -1837,6 +1837,7 @@ msgstr "Cumartesi"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
+msgctx "Short week day name"
 msgid "Sun"
 msgstr "Paz"
 
