--- a/po/lt.po
+++ b/po/lt.po
@@ -2406,7 +2406,7 @@ msgstr "Patikrinti privilegijas"
 #: libraries/common.inc.php:588
 #| msgid "Could not save configuration"
 msgid "Failed to read configuration file"
-msgstr "Nepavyko išsaugoti konfigūracijos failo"
+msgstr "Nepavyko perskaityti konfigūracijos failo"
 
 #: libraries/common.inc.php:589
 msgid ""
