--- a/po/br.po
+++ b/po/br.po
@@ -1857,7 +1857,7 @@ msgstr "Sadorn"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "Sul"
 
