--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1858,7 +1858,7 @@ msgstr "星期六"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "周日"
 
