--- a/po/ca.po
+++ b/po/ca.po
@@ -1903,7 +1903,7 @@ msgstr "Dissabte"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "Diu"
 
