--- a/po/da.po
+++ b/po/da.po
@@ -1877,7 +1877,7 @@ msgstr "lørdag"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "søn"
 
