--- a/po/fa.po
+++ b/po/fa.po
@@ -1917,7 +1917,7 @@ msgstr "شنبه"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "يكشنبه"
 
