--- a/po/hu.po
+++ b/po/hu.po
@@ -1895,7 +1895,7 @@ msgstr "Szombat"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "V"
 
