--- a/po/ko.po
+++ b/po/ko.po
@@ -1911,7 +1911,7 @@ msgstr "토요일"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "일"
 
