--- a/po/nb.po
+++ b/po/nb.po
@@ -1899,7 +1899,7 @@ msgstr "Lørdag"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "Søn"
 
