--- a/po/nl.po
+++ b/po/nl.po
@@ -1888,7 +1888,7 @@ msgstr "zaterdag"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "zo"
 
