--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1872,7 +1872,7 @@ msgstr "Sábado"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "Dom"
 
