--- a/po/ru.po
+++ b/po/ru.po
@@ -1878,7 +1878,7 @@ msgstr "Суббота"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "Вс"
 
