--- a/po/sk.po
+++ b/po/sk.po
@@ -1868,7 +1868,7 @@ msgstr "Sobota"
 
 #. l10n: Short week day name
 #: js/messages.php:346 libraries/common.lib.php:1493
-msgctx "Short week day name"
+msgctxt "Short week day name"
 msgid "Sun"
 msgstr "Ne"
 
