--- a/po/lt.po
+++ b/po/lt.po
@@ -1313,10 +1313,10 @@ msgstr ""
 
 #. l10n: %s is FILE or TABLE
 #: js/messages.php:140
-#, fuzzy, php-format
+#, php-format
 #| msgid "Save output to a file"
 msgid "Set log_output to %s"
-msgstr "Išsaugoti į failą"
+msgstr "Nustatyti log_output į %s"
 
 #. l10n: Enable in this context means setting a status variable to ON
 #: js/messages.php:142
