--- a/po/lt.po
+++ b/po/lt.po
@@ -1370,7 +1370,7 @@ msgstr "Skirtumas"
 #: js/messages.php:154
 #, php-format
 msgid "Divided by %s:"
-msgstr ""
+msgstr "Padalintas į %s:"
 
 #: js/messages.php:156
 msgid "From slow log"
