--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 16:07+0200\n"
+"PO-Revision-Date: 2011-08-08 16:08+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1424,7 +1424,7 @@ msgstr "Filtras"
 
 #: js/messages.php:170
 msgid "Filter queries by word/regexp:"
-msgstr ""
+msgstr "Filtro užklausa pagal žodį/regexp:"
 
 #: js/messages.php:171
 msgid "Group queries, ignoring variable data in WHERE clauses"
