Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 16:16+0200\n"
+"PO-Revision-Date: 2011-08-08 16:17+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2294,7 +2294,7 @@ msgstr "Neteisingas naudotojo vardas arba slaptažodis. Priėjimas uždraustas."
 
 #: libraries/auth/signon.auth.lib.php:88
 msgid "Can not find signon authentication script:"
-msgstr ""
+msgstr "Nepavyko surasti prisijungimo tapatumo nustatymo scenarijaus:"
 
 #: libraries/auth/swekey/swekey.auth.lib.php:118
 #, php-format
