--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 16:18+0200\n"
+"PO-Revision-Date: 2011-08-08 16:19+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2612,10 +2612,9 @@ msgid "The %s functionality is affected by a known bug, see %s"
 msgstr "%s funkcionalumas paveiktas žinomos klaidos, žiūrėti %s"
 
 #: libraries/common.lib.php:2460
-#, fuzzy
 #| msgid "Click to select"
 msgid "Click to toggle"
-msgstr "Spustelėkite pažymėjimui"
+msgstr "Spustelėkite suskleidimui/atskleidimui"
 
 #: libraries/common.lib.php:2789 libraries/common.lib.php:2796
 #: libraries/common.lib.php:2988 libraries/config/setup.forms.php:296
