--- a/po/lt.po
+++ b/po/lt.po
@@ -2682,7 +2682,7 @@ msgstr "Niekur"
 
 #: libraries/config.values.php:47
 msgid "Left"
-msgstr ""
+msgstr "Kairė"
 
 #: libraries/config.values.php:47
 #, fuzzy
