Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 16:25+0200\n"
+"PO-Revision-Date: 2011-08-08 16:26+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -4245,7 +4245,7 @@ msgstr ""
 
 #: libraries/config/messages.inc.php:385
 msgid "Designer table"
-msgstr "Lentelės projektuotojas"
+msgstr "Suprojektuoti lentelę"
 
 #: libraries/config/messages.inc.php:386
 msgid ""
