--- a/po/lt.po
+++ b/po/lt.po
@@ -4766,7 +4766,7 @@ msgstr ""
 
 #: libraries/config/messages.inc.php:491
 msgid "Textarea rows"
-msgstr ""
+msgstr "Textarea eilutės"
 
 #: libraries/config/messages.inc.php:492
 msgid "Title of browser window when a database is selected"
