Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -5360,10 +5360,9 @@ msgid "Number of rows"
 msgstr "Eilučių skaičius:"
 
 #: libraries/display_tbl.lib.php:443
-#, fuzzy
 #| msgid "More"
 msgid "Mode"
-msgstr "Daugiau"
+msgstr "Režimas"
 
 #: libraries/display_tbl.lib.php:445
 msgid "horizontal"
