--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 16:35+0200\n"
+"PO-Revision-Date: 2011-08-08 16:36+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -5593,7 +5593,7 @@ msgstr "Įrašymo užklausos"
 
 #: libraries/engines/innodb.lib.php:230
 msgid "Read misses"
-msgstr ""
+msgstr "Skaitymo nepataikymai"
 
 #: libraries/engines/innodb.lib.php:236
 msgid "Write waits"
