--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,7 @@ phpMyAdmin - ChangeLog
 + [interface] Improved server monitoring
 + AJAX for table Structure column Add
 + AJAX for table Operations copy table
+- bug #3380946 [export] no uid Query result export (Suhosin limit)
 
 3.4.5.0 (not yet released)
 - bug #3375325 [interface] Page list in navigation frame looks odd
