Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 16:43+0200\n"
+"PO-Revision-Date: 2011-08-08 16:44+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6395,7 +6395,7 @@ msgstr "Pridėti lentelės priešdėlį"
 #: libraries/mult_submits.inc.php:271
 #| msgid "Apply index(s)"
 msgid "Add prefix"
-msgstr "Keisti priešdėlį"
+msgstr "Pridėti priešdėlį"
 
 #: libraries/mult_submits.inc.php:488 tbl_replace.php:313
 msgid "No change"
