--- a/po/lt.po
+++ b/po/lt.po
@@ -6811,7 +6811,7 @@ msgstr "Sekančios užklausos nepavyko: %s"
 
 #: libraries/rte/rte_events.lib.php:116
 msgid "Sorry, we failed to restore the dropped event."
-msgstr ""
+msgstr "Atsiprašome, nepavyko atstatyti pašalinto įvykio."
 
 #: libraries/rte/rte_events.lib.php:117 libraries/rte/rte_routines.lib.php:269
 #: libraries/rte/rte_triggers.lib.php:90
