--- a/po/lt.po
+++ b/po/lt.po
@@ -6825,10 +6825,10 @@ msgid "Event %1$s has been modified."
 msgstr "Įvykis %1$s buvo pakeistas."
 
 #: libraries/rte/rte_events.lib.php:133
-#, fuzzy, php-format
+#, php-format
 #| msgid "Table %1$s has been created."
 msgid "Event %1$s has been created."
-msgstr "Sukurta %1$s lentelė."
+msgstr "Įvykis %1$s buvo sukurtas."
 
 #: libraries/rte/rte_events.lib.php:141 libraries/rte/rte_routines.lib.php:294
 #: libraries/rte/rte_triggers.lib.php:114
