--- a/po/lt.po
+++ b/po/lt.po
@@ -6841,10 +6841,9 @@ msgid "Create event"
 msgstr "Sukurti įvykį"
 
 #: libraries/rte/rte_events.lib.php:185
-#, fuzzy
 #| msgid "Edit server"
 msgid "Edit event"
-msgstr "Redaguoti serverį"
+msgstr "Redaguoti įvykį"
 
 #: libraries/rte/rte_events.lib.php:212 libraries/rte/rte_routines.lib.php:370
 #: libraries/rte/rte_routines.lib.php:1264
