--- a/po/lt.po
+++ b/po/lt.po
@@ -6855,10 +6855,9 @@ msgstr "Klaida vykdant užklausą"
 
 #: libraries/rte/rte_events.lib.php:371 libraries/rte/rte_routines.lib.php:817
 #: libraries/rte/rte_triggers.lib.php:298
-#, fuzzy
 #| msgid "Details..."
 msgid "Details"
-msgstr "Detalės..."
+msgstr "Detalės"
 
 #: libraries/rte/rte_events.lib.php:374
 #, fuzzy
