--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 16:52+0200\n"
+"PO-Revision-Date: 2011-08-08 16:53+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7036,10 +7036,9 @@ msgid "Return type"
 msgstr "Gražinimo tipas"
 
 #: libraries/rte/rte_routines.lib.php:881
-#, fuzzy
 #| msgid "Length/Values"
 msgid "Return length/values"
-msgstr "Ilgis/reikšmės*"
+msgstr "Grąžinimo Ilgis/reikšmės"
 
 #: libraries/rte/rte_routines.lib.php:887
 #, fuzzy
