--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 16:54+0200\n"
+"PO-Revision-Date: 2011-08-08 16:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7056,7 +7056,7 @@ msgstr "Saugumo tipas"
 
 #: libraries/rte/rte_routines.lib.php:934
 msgid "SQL data access"
-msgstr ""
+msgstr "SQL duomenų priėjimas"
 
 #: libraries/rte/rte_routines.lib.php:999
 msgid "You must provide a routine name"
